force-app/main/default/objects/TSS_StickIt_MR1__StickIt_Label_Set__c/TSS_StickIt_MR1__StickIt_Label_Set__c.object-meta.xml
<CustomObject>
    <label>StickIt Label Set</label>
    <nameField>
        <label>Label Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StickIt Label Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>