force-app/main/default/objects/TSS_StickIt_MR1__StickIt_Label_Set__c/fields/TSS_StickIt_MR1__Label_10__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Label_10__c</fullName>
    <description>Salesforce Id of the Document record associated with the label template.</description>
    <inlineHelpText>Salesforce Id of the Document record associated with the label template.</inlineHelpText>
    <label>Label 10</label>
    <length>18</length>
    <type>Text</type>
</CustomField>