force-app/main/default/objects/TSS_StickIt_MR1__StickIt_Label_Set__c/fields/TSS_StickIt_MR1__Object__c.field-meta.xml
<CustomField>
    <fullName>TSS_StickIt_MR1__Object__c</fullName>
    <description>Salesforce Object (API Name) this Label Set is assigned to.</description>
    <inlineHelpText>Salesforce Object (API Name) this Label Set is assigned to.</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>