force-app/main/default/objects/TSS_StickIt_MR1__StickIt_Label_Set__c/listViews/allSelection_StickIt_Label_Set.listView-meta.xml
<ListView>
    <fullName>allSelection_StickIt_Label_Set</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>