force-app/main/default/objects/TSS_StickIt_MR1__StickIt_Label_Set__c/listViews/TSS_StickIt_MR1__All.listView-meta.xml
<ListView>
    <fullName>TSS_StickIt_MR1__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>